--- a/includes/composer.json
+++ b/includes/composer.json
@@ -1,5 +1,6 @@
 {
     "require": {
-        "guzzlehttp/guzzle": "^7.8"
+        "guzzlehttp/guzzle": "^7.8",
+        "chillerlan/php-qrcode": "^4.3"
     }
 }
